// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrontArticleSummaryContent landscape huge 1`] = `
<Text
  numberOfLines={9}
  style={
    Array [
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 0,
      },
      Array [
        undefined,
        Object {
          "color": "#333333",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 16,
          "lineHeight": 20,
        },
      ],
    ]
  }
>
  <Text
    style={
      Array [
        false,
      ]
    }
    textBreakStrategy="simple"
  >
    Test
    

  </Text>
</Text>
`;

exports[`FrontArticleSummaryContent landscape medium 1`] = `
<Text
  numberOfLines={10}
  style={
    Array [
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 0,
      },
      Array [
        undefined,
        Object {
          "color": "#333333",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 18,
        },
      ],
    ]
  }
>
  <Text
    style={
      Array [
        false,
      ]
    }
    textBreakStrategy="simple"
  >
    Test
    

  </Text>
</Text>
`;

exports[`FrontArticleSummaryContent landscape wide 1`] = `
<Text
  numberOfLines={10}
  style={
    Array [
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 0,
      },
      Array [
        undefined,
        Object {
          "color": "#333333",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 18,
        },
      ],
    ]
  }
>
  <Text
    style={
      Array [
        false,
      ]
    }
    textBreakStrategy="simple"
  >
    Test
    

  </Text>
</Text>
`;

exports[`FrontArticleSummaryContent portrait huge 1`] = `
<Text
  numberOfLines={9}
  style={
    Array [
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 0,
      },
      Array [
        undefined,
        Object {
          "color": "#333333",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 16,
          "lineHeight": 20,
        },
      ],
    ]
  }
>
  <Text
    style={
      Array [
        false,
      ]
    }
    textBreakStrategy="simple"
  >
    Test
    

  </Text>
</Text>
`;

exports[`FrontArticleSummaryContent portrait medium 1`] = `
<Text
  numberOfLines={10}
  style={
    Array [
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 0,
      },
      Array [
        undefined,
        Object {
          "color": "#333333",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 18,
        },
      ],
    ]
  }
>
  <Text
    style={
      Array [
        false,
      ]
    }
    textBreakStrategy="simple"
  >
    Test
    

  </Text>
</Text>
`;

exports[`FrontArticleSummaryContent portrait wide 1`] = `
<Text
  numberOfLines={9}
  style={
    Array [
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 0,
      },
      Array [
        undefined,
        Object {
          "color": "#333333",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 16,
          "lineHeight": 20,
        },
      ],
    ]
  }
>
  <Text
    style={
      Array [
        false,
      ]
    }
    textBreakStrategy="simple"
  >
    Test
    

  </Text>
</Text>
`;
